<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screen.lock_pattern.SetLockPatternActivity">

    <ImageView
        android:id="@+id/ivStepOne"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        app:layout_constraintDimensionRatio="1 : 1"
        android:src="@drawable/iv_step_1"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_100sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_medium"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintTop_toTopOf="@+id/ivStepOne"
        app:layout_constraintBottom_toBottomOf="@+id/ivStepOne"
        app:layout_constraintStart_toStartOf="@+id/ivStepOne"
        app:layout_constraintEnd_toEndOf="@+id/ivStepOne" />

    <ImageView
        android:id="@+id/ivStepTwo"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        app:layout_constraintDimensionRatio="1 : 1"
        android:src="@drawable/iv_step_2"
        android:layout_marginEnd="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_number__step_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textColor="@color/main_blue"
        android:fontFamily="@font/inter_medium"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintTop_toTopOf="@+id/ivStepTwo"
        app:layout_constraintBottom_toBottomOf="@+id/ivStepTwo"
        app:layout_constraintStart_toStartOf="@+id/ivStepTwo"
        app:layout_constraintEnd_toEndOf="@+id/ivStepTwo" />

    <Button
        android:id="@+id/iv_progress_bar"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        app:layout_constraintDimensionRatio="20 : 1"
        android:layout_marginTop="@dimen/_65sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:backgroundTint="@color/grey"
        app:layout_constraintStart_toStartOf="@+id/ivStepOne"
        app:layout_constraintEnd_toEndOf="@+id/ivStepTwo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_draw_an_unlock_pattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw_an_unlock_pattern"
        android:fontFamily="@font/inter_bold"
        android:layout_marginTop="@dimen/_50sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@+id/iv_progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_connect_4_or_more_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_4_or_more_dots"
        android:fontFamily="@font/inter_regular"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_draw_an_unlock_pattern"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.giang.applock20.screen.lock_pattern.PatternLockView
        android:id="@+id/pattern_lock_view"
        android:layout_width="280dp"
        android:layout_height="280dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    <ImageView
        android:id="@+id/btnReset"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:visibility="invisible"
        app:layout_constraintDimensionRatio="28 : 5"
        android:src="@drawable/btn_reset"
        android:layout_marginTop="@dimen/_100sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pattern_lock_view"/>

    <TextView
        android:id="@+id/tv_Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_bold"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintTop_toTopOf="@+id/btnReset"
        app:layout_constraintBottom_toBottomOf="@+id/btnReset"
        app:layout_constraintStart_toStartOf="@+id/btnReset"
        app:layout_constraintEnd_toEndOf="@+id/btnReset" />

</androidx.constraintlayout.widget.ConstraintLayout>